--- a/IMDB Sentiment Analysis.ipynb
+++ b/IMDB Sentiment Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "7f5142f7",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a851b649",
    "metadata": {},
    "outputs": [
@@ -48,28 +48,48 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset imdb (/home/chris/.cache/huggingface/datasets/imdb/plain_text/1.0.0/2fdd8b9bcadd6e7055e742a706876ba43f19faee861df134affd7a3f60fc38a1)\n"
+      "/opt/homebrew/Caskroom/miniconda/base/envs/data_sci_global_summit/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Found cached dataset imdb (/Users/chris/.cache/huggingface/datasets/imdb/plain_text/1.0.0/2fdd8b9bcadd6e7055e742a706876ba43f19faee861df134affd7a3f60fc38a1)\n",
+      "100%|██████████| 3/3 [00:00<00:00, 527.03it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9f4a35765d548ae858c07effe528787",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
     "dataset = load_dataset(\"imdb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1c82e997-6fbc-43ab-9495-42f9b7b39fb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset[\"train\"][0][\"label\"] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a7b45521-b2dc-426a-b1d6-c68a63b305d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[\"train\"][0][\"label\"]"
    ]
   },
   {
@@ -88,7 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "c82cf0b2-9af0-46a2-8287-62c83101d14d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python -m spacy download en_core_web_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "881076eb",
    "metadata": {},
    "outputs": [],
@@ -100,11 +130,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3c39514c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a test.'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc = nlp(\"This is a test.\")\n",
+    "\n",
+    "doc.text"
+   ]
   },
   {
    "cell_type": "code",
@@ -343,17 +388,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "8d4b7a10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'predicted_labels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mock_train_labels \u001b[38;5;241m=\u001b[39m \u001b[43mpredicted_labels\u001b[49m(mock_train_results)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'predicted_labels' is not defined"
+     ]
+    }
+   ],
    "source": [
     "mock_train_labels = predicted_labels(mock_train_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d4fba5e8",
    "metadata": {},
    "outputs": [],
@@ -363,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "033f27c5",
    "metadata": {},
    "outputs": [],
@@ -381,97 +438,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "7912fac5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision 0.0,\n",
-      "    Recall 0.0,\n",
-      "    F1 0.0\n",
-      "    \n",
-      "    ---\n",
-      "    Confusion matrix\n",
-      "    [[12500     0]\n",
-      " [12500     0]]\n",
-      "    \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/chris/miniconda3/envs/skweak/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calculate_metrics(train_true, mock_train_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "89cfe53e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision 0.0,\n",
-      "    Recall 0.0,\n",
-      "    F1 0.0\n",
-      "    \n",
-      "    ---\n",
-      "    Confusion matrix\n",
-      "    [[12500     0]\n",
-      " [12500     0]]\n",
-      "    \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/chris/miniconda3/envs/skweak/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "calculate_metrics(test_true, mock_train_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "646a2ec7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/chris/miniconda3/envs/skweak/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import precision_score\n",
     "y_true = [0, 1, 1, 0, 1, 1]\n",
@@ -489,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "6538b5f7",
    "metadata": {},
    "outputs": [],
@@ -511,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "ac0eb755",
    "metadata": {},
    "outputs": [],
@@ -525,17 +515,17 @@
     "        for start, end, score in gazetteer.find_spans(doc):\n",
     "            gazetteer_score += score \n",
     "        if 0 < gazetteer_score:\n",
-    "            yield 0, len(doc), \"1\" # type: ignore\n",
+    "            yield 0, len(doc), \"1\"\n",
     "        # TODO set default to -1 (unlabelled) or 0 (negative)?\n",
     "        else:\n",
-    "            yield 0, len(doc), \"0\" # type: ignore\n",
+    "            yield 0, len(doc), \"0\"\n",
     "        \n",
     "gazetteer_doc_detector = GazetteerDocDetector()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "9e39051a",
    "metadata": {},
    "outputs": [],
@@ -545,21 +535,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "9e636c31",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<skweak.base.CombinedAnnotator at 0x7faedf6ddff0>"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "combined_sentiment = skweak.base.CombinedAnnotator()\n",
     "combined_sentiment.add_annotator(gazetteer_doc_detector)\n",
@@ -580,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "1ab6f040",
    "metadata": {},
    "outputs": [],
@@ -591,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "4bc63a0f",
    "metadata": {},
    "outputs": [],
@@ -603,7 +582,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "id": "2b1645d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculate_metrics(train_true, gaz_docs_train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ba2451e7",
    "metadata": {},
    "outputs": [],
@@ -614,54 +603,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "2b1645d3",
+   "execution_count": null,
+   "id": "8745e922",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision 0.5524544179523142,\n",
-      "    Recall 0.63024,\n",
-      "    F1 0.5887892376681615\n",
-      "    \n",
-      "    ---\n",
-      "    Confusion matrix\n",
-      "    [[6118 6382]\n",
-      " [4622 7878]]\n",
-      "    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "calculate_metrics(train_true, gaz_docs_train_labels)"
+    "calculate_metrics(train_true, gaz_docs_test_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "8745e922",
+   "execution_count": null,
+   "id": "e00516f1-cfd5-48c2-81e9-eb8124ec47db",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision 0.5522292083452415,\n",
-      "    Recall 0.61832,\n",
-      "    F1 0.5834088164251208\n",
-      "    \n",
-      "    ---\n",
-      "    Confusion matrix\n",
-      "    [[6233 6267]\n",
-      " [4771 7729]]\n",
-      "    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "calculate_metrics(train_true, gaz_docs_test_labels)"
+    "train_texts = [doc.text for doc in gaz_train_docs]\n",
+    "train_weak_labels = gaz_docs_train_labels\n",
+    "\n",
+    "test_texts = [doc.text for doc in gaz_docs_test]\n",
+    "test_weak_labels = gaz_docs_test\n",
+    "\n",
+    "train_df = pd.DataFrame(list(zip(train_texts, train_weak_labels)),\n",
+    "               columns =['text', 'label'])\n",
+    "\n",
+    "train_df.to_json(\"weak_imdb_train.jsonl\", orient=\"records\", lines=True)\n",
+    "\n",
+    "test_df = pd.DataFrame(list(zip(train_texts, train_weak_labels)),\n",
+    "               columns =['text', 'label'])\n",
+    "\n",
+    "test_df.to_json(\"weak_imdb_test.jsonl\", orient=\"records\", lines=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e72d8b04-c685-4ec1-9705-977f45c840b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weak_train_dataset = load_dataset(\"json\", data_files=\"weak_imdb_train.jsonl\", split=\"train\")\n",
+    "\n",
+    "weak_test_dataset = load_dataset(\"json\", data_files=\"weak_imdb_test.jsonl\", split=\"train\")\n"
    ]
   },
   {
@@ -670,7 +653,9 @@
    "id": "2afb87d7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# python -m spacy init fill-config ./base_config.cfg ./config.cfg"
+   ]
   },
   {
    "cell_type": "code",
@@ -678,12 +663,113 @@
    "id": "6587391f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
+    "\n",
+    "\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "\n",
+    "tokenized_datasets = dataset.map(tokenize_function, batched=True)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22d109dc-e5ef-4345-9d91-a099c63ea273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelForSequenceClassification\n",
+    "\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\"bert-base-cased\", num_labels=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d73bc6d-e009-479b-9c3e-ef68b6214a4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TrainingArguments\n",
+    "\n",
+    "training_args = TrainingArguments(output_dir=\"test_trainer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d14c25d6-44f4-4639-82ef-71fe54e76258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import evaluate\n",
+    "\n",
+    "metric = evaluate.load(\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d93f84f-7997-4c0d-a75a-b687801d3d15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_metrics(eval_pred):\n",
+    "    logits, labels = eval_pred\n",
+    "    predictions = np.argmax(logits, axis=-1)\n",
+    "    return metric.compute(predictions=predictions, references=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bd401c6-13f0-4ab7-bb17-170e15dbc1b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TrainingArguments, Trainer\n",
+    "\n",
+    "training_args = TrainingArguments(output_dir=\"test_trainer\", evaluation_strategy=\"epoch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ea68ad8-f826-4bd2-a1da-58103aa2f424",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=small_train_dataset,\n",
+    "    eval_dataset=small_eval_dataset,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c09f83b7-8f62-4d18-9814-155727fa0ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.train()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -697,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
